[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-api-monitor"
version = "0.1.0"
description = "Monitor OpenClaw (Linux) for LLM API failures (rate limit, tokens, etc.) and watch until recovery."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
openclaw-monitor = "openclaw_monitor.runner:main_loop"

[tool.setuptools.packages.find]
where = ["src"]
